syntax = "proto3";

package rastreio;

service MetricsService {
  rpc RegistrarLocalizacao (Localizacao) returns (Empty);
}

message Localizacao {
  string id = 1;
  string id_dispositivo = 2;
  double latitude = 3;
  double longitude = 4;
}

message Empty {}
